[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/architect-s-daughter/ArchitectsDaughter.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Viewport.gd" type="Script" id=2]
[ext_resource path="res://Exclamation.gd" type="Script" id=3]

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Sprite3D/Viewport")

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 96
font_data = ExtResource( 1 )

[node name="Exclamation" type="Spatial"]
script = ExtResource( 3 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )
cast_shadow = 0
modulate = Color( 0, 0, 0, 1 )
shaded = true
texture = SubResource( 2 )

[node name="Viewport" type="Viewport" parent="Sprite3D"]
size = Vector2( 165, 166 )
transparent_bg = true
render_target_v_flip = true
script = ExtResource( 2 )

[node name="OwLabel" type="Label" parent="Sprite3D/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "ow"

[node name="OwTimer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="timeout" from="OwTimer" to="." method="_on_OwTimer_timeout"]
